k8s-security-framework/policies/pod-security/KSP-POD-014/tests/boundary-fail-single-condition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-014-negative-ephemeral-hostport-additional-boundary-fail
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
  ephemeralContainers:
  - name: debugger
    image: harbor.example.com/demo-api:1.0.0
    command:
    - sh
    ports:
    - containerPort: 8080
      hostPort: 8080
