k8s-security-framework/policies/pod-security/KSP-POD-014/tests/exception-resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-014-exception
  namespace: policy-test
spec:
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
      ports:
        - containerPort: 8080
          hostPort: 8080
