k8s-security-framework/policies/pod-security/KSP-POD-014/tests/exception-resources-with-policy-violation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-014-exception
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    ports:
    - containerPort: 8080
      hostPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-014-exception-secondary
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
    ports:
    - containerPort: 8080
      hostPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-014-exception-tertiary
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
  ephemeralContainers:
  - name: debugger
    image: harbor.example.com/demo-api:1.0.0
    command:
    - sh
    ports:
    - containerPort: 8080
      hostPort: 8080
